# clean-architecture-for-rust

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose-dev.yaml  docker-compose.yaml
migrations/: 0001_create-users_up.sql  0002_create-tokens_down.sql  0002_create-tokens_up.sql
src/: main.rs  postgres.rs
src/api/: error.rs  mod.rs
src/api/auth/: access_token.rs  handler.rs  mod.rs  refresh_token.rs  token.rs
src/api/controller/: user.rs
src/api/user/: handler.rs
src/business/: error.rs  mod.rs
src/business/auth/: mod.rs  request.rs  service.rs
src/business/dao/: user.rs
src/business/service/: user.rs
src/business/user/: mod.rs  repository.rs  request.rs  service.rs
src/core/: error.rs  mod.rs  token.rs  user.rs
src/driver/: error.rs  mod.rs
src/driver/dao/: token.rs  user.rs
src/driver/database/: client_adapter.rs  config_factory.rs  mod.rs  pool_adapter.rs  pool_factory.rs
src/postgres/: mod.rs  pool_factory.rs
tests/: Authentication.http  User.http
