[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
deadpool-postgres = "0.12.1"
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio-postgres = "0.7.10"
tokio-postgres-migration = "0.1.0"