[package]
name = "abcd-layered-architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
deadpool-postgres = "0.12.1"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
tokio-postgres-migration = "0.1.0"
uuid = { version = "1.7.0", features = ["v7", "serde"] }
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
bcrypt = "0.15.0"
urlencoding = "2.1.3"